testdata/baselines/reference/submodule/compiler/templateExpressionNoInlininingOfConstantBindingWithInitializer.errors.txt
templateExpressionNoInlininingOfConstantBindingWithInitializer.ts(7,10): error TS2367: This comparison appears to be unintentional because the types '"123"' and '"345"' have no overlap.


==== templateExpressionNoInlininingOfConstantBindingWithInitializer.ts (1 errors) ====
    type Params = {
      value?: string | number
    }
    
    function example(parameters: Params) {
      const { value = '123' } = parameters
      return `${value}` === '345'
             ~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"123"' and '"345"' have no overlap.
    }
    
    function example2(parameters: Params) {
      const { value = '123' } = parameters
      const b = `${value}`;
      return b;
    }
    